BAP-19082: Update liuggio/excelbundle package (#24480)
* BAP-19082: Update liuggio/excelbundle package
- add cache provider whit store data in "php://temp"
- change XLSX write from "PHPExcel" to "PhpOffice\PhpSpreadsheet"
- added psr exception on invalid arguments for php temp cache implementation
- update xlsx writer test
- change package to read/write xlsx to "box/spout"
- update dependencies list
- remove missing bundle initialization
- remove "php://temp" cache
- added SymfonyRequirements.php to git
- ignoring coding standards in SymfonyRequirements.php
* Restore XSS tests to original flow

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ behat.yml
 /var/import_export/*
 !var/import_export/.gitkeep
 !var/oro-check.php
+!var/SymfonyRequirements.php
 !var/OroRequirements.php
 /build/logs/*
 /vendor
@@ -38,7 +39,6 @@ bin/*
 !bin/console
 !bin/dist
 phpunit.xml
-/var/SymfonyRequirements.php
 /public/uploads/behat
 /.web-server-pid
 /.vagrant
